--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 
+spring.datasource.driver-class-name=
 spring.datasource.url=jdbc:mysql://localhost:3306/school?useUnicode=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://databases-auth.000webhost.com/id17071418_school?useUnicode=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.testWhileIdle=True
-spring.datasource.validationQuery=SELECT 1
 
 jwt.secret = "SUPERSECRETCODE"
